# ffxiv-static-solver

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
example-frontend/: .gitignore  index.html  index.js  package.json  webpack.config.js  worker.js
js/: client.js  worker.js
pkg/: client.js  worker.js
script/: build.sh  host-example.sh  package.sh  upload.sh
src/: job.rs  lib.rs  main.rs  player.rs  slot.rs  slots.rs  solver.rs
www/: index.html  index.js  package-lock.json  package.json
