[package]
name = "ffxiv-static-solver"
version = "0.1.1"
authors = ["Justin Fitzsimmons <justin@fitzsimmons.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.74"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = "0.4.5"
strum = { version = "0.21", features = ["derive"] }
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
permute = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
